--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,11 @@
   "description": "A plain text description",
 
   "browser_action": {
-  	"default_popup": "popup.html"
+  	"default_popup": "popup.html",
+    "default_icon": {                    
+      "19": "assets/icon19.jpg",
+      "38": "assets/icon38.jpg"
+    }
   },
   "background": {
     "scripts": ["jquery.min.js", "global.js", "background.js"]
